{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 46,
  "lineage": "81e646b4-28f7-e13d-9d0a-3a3e9cf12405",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06c4ef58c20a02512",
            "domain": "vpc",
            "id": "eipalloc-0b843a3f62a956d28",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c1d4edee9ad7e13a",
            "private_dns": "ip-10-0-1-144.ap-south-1.compute.internal",
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-52-66-101-188.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.101.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073c8c0760395aab8",
            "arn": "arn:aws:ec2:ap-south-1:151551371461:instance/i-0cce2615a71186afd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cce2615a71186afd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "es",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-086bcace31b564c94",
            "private_dns": "ip-10-0-1-97.ap-south-1.compute.internal",
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-13-233-123-171.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.123.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c6c641f6f4284bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd74b43a82e618c",
            "tags": {
              "Name": "Node_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e839df66d50552f7"
            ]
          },
          "dependencies": [
            "aws_security_group.sg12",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073c8c0760395aab8",
            "arn": "arn:aws:ec2:ap-south-1:151551371461:instance/i-0afe8f53e1072612e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afe8f53e1072612e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "es",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0616464a89208ab29",
            "private_dns": "ip-10-0-1-106.ap-south-1.compute.internal",
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-13-232-132-80.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.132.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b6942bb35ad3e17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd74b43a82e618c",
            "tags": {
              "Name": "Node_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e839df66d50552f7"
            ]
          },
          "dependencies": [
            "aws_security_group.sg12",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073c8c0760395aab8",
            "arn": "arn:aws:ec2:ap-south-1:151551371461:instance/i-0eb75497271f08d4c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb75497271f08d4c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "es",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010cc3f061b491ba4",
            "private_dns": "ip-10-0-1-34.ap-south-1.compute.internal",
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-13-235-242-25.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.242.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b59dbcffb3ab2d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd74b43a82e618c",
            "tags": {
              "Name": "Node_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e839df66d50552f7"
            ]
          },
          "dependencies": [
            "aws_security_group.sg12",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:internet-gateway/igw-0e669dcfe986056bb",
            "id": "igw-0e669dcfe986056bb",
            "owner_id": "151551371461",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-igw"
            },
            "vpc_id": "vpc-0d4dac27be8dd17e2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b843a3f62a956d28",
            "id": "nat-0d8891e9e83f3caca",
            "network_interface_id": "eni-0c1d4edee9ad7e13a",
            "private_ip": "10.0.1.144",
            "public_ip": "52.66.101.188",
            "subnet_id": "subnet-08bd74b43a82e618c",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09527c3fccfc4b8d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d8891e9e83f3caca",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09527c3fccfc4b8d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e669dcfe986056bb",
            "id": "r-rtb-083b1c23cdb590c4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083b1c23cdb590c4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09527c3fccfc4b8d3",
            "owner_id": "151551371461",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8891e9e83f3caca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-private-route-table"
            },
            "vpc_id": "vpc-0d4dac27be8dd17e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-083b1c23cdb590c4c",
            "owner_id": "151551371461",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e669dcfe986056bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-public-route-table"
            },
            "vpc_id": "vpc-0d4dac27be8dd17e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b402544353c3a61",
            "route_table_id": "rtb-09527c3fccfc4b8d3",
            "subnet_id": "subnet-05ba3b11b6cb7c46f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0675e86dab2631f67",
            "route_table_id": "rtb-083b1c23cdb590c4c",
            "subnet_id": "subnet-08bd74b43a82e618c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:security-group/sg-0e839df66d50552f7",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0e839df66d50552f7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "sg12",
            "name_prefix": "",
            "owner_id": "151551371461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4dac27be8dd17e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:subnet/subnet-05ba3b11b6cb7c46f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-05ba3b11b6cb7c46f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151551371461",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-ap-south-1a-private-subnet"
            },
            "vpc_id": "vpc-0d4dac27be8dd17e2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:subnet/subnet-08bd74b43a82e618c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08bd74b43a82e618c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151551371461",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-ap-south-1a-      public-subnet"
            },
            "vpc_id": "vpc-0d4dac27be8dd17e2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:vpc/vpc-0d4dac27be8dd17e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aac908a7c097dbcf",
            "default_route_table_id": "rtb-0a90c38f1dfae236e",
            "default_security_group_id": "sg-0b5ed0c78387fd093",
            "dhcp_options_id": "dopt-94fb23ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d4dac27be8dd17e2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a90c38f1dfae236e",
            "owner_id": "151551371461",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-vpc"
            }
          }
        }
      ]
    }
  ]
}